--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -525,7 +525,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.4.2</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.4.3</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -2025,10 +2025,11 @@
       console.info(`Total subwoofer 'delay headroom' available → ${(hiDelay-loDelay).toFixed(2)}ms`);
     }
     async function updateEQTargetSettings(idx, start, end, isSub) {
-      // aggressively line up response to target curve
+      // aggressively line up response to target curve based on weakest region of the response
       let tcLevelOffset = 0;
       if (isSub) {
         const offsets = [];
+        offsets.push(await getSPLOffsetFromTarget(idx,                 30,                80));
         offsets.push(await getSPLOffsetFromTarget(idx, Math.max(start, 20), Math.min(end, 120)));
         offsets.push(await getSPLOffsetFromTarget(idx, Math.max(start, 20),          end      ));
         offsets.push(await getSPLOffsetFromTarget(idx,          start,      Math.min(end, 120)));
@@ -2037,6 +2038,7 @@
       }
       else {
         const offsets = [];
+        offsets.push(await getSPLOffsetFromTarget(idx,                 500,                2000));
         offsets.push(await getSPLOffsetFromTarget(idx, Math.max(start, 200), Math.min(end, 2000)));
         offsets.push(await getSPLOffsetFromTarget(idx, Math.max(start, 200),          end       ));
         offsets.push(await getSPLOffsetFromTarget(idx,          start,       Math.min(end, 2000)));
